--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~3.0.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
+    "semantic-ui": "^2.2.4",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
